tests/purs/failing/OrphanRoleDeclaration1.purs
-- @shouldFailWith OrphanRoleDeclaration
module Main where

type role D nominal
